<resources>
    <string name="app_name">City of Festivals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">City of Festivals</string>
    <string name="nav_header_subtitle">Milwaukee, Wisconsin</string>
    <string name="nav_header_desc">City of Festivals</string>
    <string name="home">Home</string>
    <string name="fest">Festivals</string>
    <string name="music">Entertainment</string>
    <string name="food">Food &amp; Drink</string>
    <string name="sponsor">Sponsors</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="its_festival_time">It\'s festival time!</string>
    <string name="share_message">Hey! Come check out all the festivals at Henry W. Maier Festival Park!
        milwaukeeworldfestival.com</string>
    <string name="main_title">Henry Maier Festival Park</string>
    <string name="main_address">200 N Harbor Dr, Milwaukee, WI 53202</string>
    <string name="main_url">milwaukeeworldfestival.com</string>
    <string name="item_image">item image</string>
    <string name="arrow_forward">arrow forward</string>
    <string name="http">http://</string>
    <string name="text_plain">text/plain</string>
    <string name="showtime_for">"Showtime for "</string>
    <string name="is">" is "</string>
    <string name="enjoy_the_show">. Enjoy the show!</string>
    <string name="mailto">mailto:</string>
    <string name="loading">"Loading "</string>
    <string name="ellipse">"&#8230;"</string>

    <!-- Festivals. -->
    <string name="pride_fest">Pride Fest</string>
    <string name="pride_fest_date">Jun 08-Jun 10</string>
    <string name="pride_fest_url">pridefest.com</string>
    <string name="polish_fest">Polish Fest</string>
    <string name="polish_fest_date">Jun 15-Jun 17</string>
    <string name="polish_fest_url">polishfest.org</string>
    <string name="summer_fest">Summerfest</string>
    <string name="summer_fest_date">Jun 27-Jul 08</string>
    <string name="summer_fest_url">summerfest.com</string>
    <string name="festa_italiana">Festa Italiana</string>
    <string name="festa_italiana_date">Jul 20-Jul 22</string>
    <string name="festa_italiana_url">festaitaliana.com</string>
    <string name="german_fest">German Fest</string>
    <string name="german_fest_date">Jul 27-Jul 29</string>
    <string name="german_fest_url">germanfest.com</string>
    <string name="black_arts_fest">Black Arts Fest</string>
    <string name="black_arts_fest_date">Aug 04</string>
    <string name="black_arts_fest_url">blackartsfestmke.com</string>
    <string name="irish_fest">Irish Fest</string>
    <string name="irish_fest_date">Aug 16-Aug 19</string>
    <string name="irish_fest_url">irishfest.com</string>
    <string name="mexican_fiesta">Mexican Fiesta</string>
    <string name="mexican_fiesta_date">Aug 24-Aug 26</string>
    <string name="mexican_fiesta_url">mexicanfiesta.org</string>
    <string name="indian_summer_festival">Indian Summer Festival</string>
    <string name="indian_summer_festival_date">Sep 07-Sep 09</string>
    <string name="indian_summer_festival_url">indiansummer.org</string>
    <string name="pet_fest">Pet Fest</string>
    <string name="pet_fest_date">Sep 22</string>
    <string name="pet_fest_url">petfestmke.com</string>

    <!-- Music acts. -->
    <string name="chasing_lovely">Chasing Lovely</string>
    <string name="chasing_lovely_gig">Summerfest</string>
    <string name="chasing_lovely_time">Jun 27 @ 03:00 PM</string>
    <string name="faux_fiction">Faux Fiction</string>
    <string name="faux_fiction_gig">Summerfest</string>
    <string name="faux_fiction_time">Jun 28 @ 03:00 PM</string>
    <string name="rat_pack_reprise">Rat Pack Reprise</string>
    <string name="rat_pack_reprise_gig">Festa Italiana</string>
    <string name="rat_pack_reprise_time">Jul 22 @ 04:30 PM</string>
    <string name="anthony_crivello">Anthony Crivello</string>
    <string name="anthony_crivello_gig">Festa Italiana</string>
    <string name="anthony_crivello_time">Jul 20 @ 07:30 PM</string>
    <string name="die_lauser">Die Lauser</string>
    <string name="die_lauser_gig">German Fest</string>
    <string name="die_lauser_time">Jul 27 @ 07:00 PM</string>
    <string name="alte_kameraden">Alte Kameraden</string>
    <string name="alte_kameraden_gig">German Fest</string>
    <string name="alte_kameraden_time">Jul 28 @ 07:00 PM</string>
    <string name="calibre">Calibre</string>
    <string name="calibre_gig">Mexican Fiesta</string>
    <string name="calibre_time">Aug 24 @ 07:00 PM</string>
    <string name="maquinaria">La Maquinaria Norteña</string>
    <string name="maquinaria_gig">Mexican Fiesta</string>
    <string name="maquinaria_time">Aug 25 @ 07:00 PM</string>
    <string name="aislinn_gagliardi">Aislinn Gagliardi</string>
    <string name="aislinn_gagliardi_gig">Irish Fest</string>
    <string name="aislinn_gagliardi_time">Aug 18 @ 07:00 PM</string>
    <string name="three_pints_gone">Three Pints Gone</string>
    <string name="three_pints_gone_gig">Irish Fest</string>
    <string name="three_pints_gone_time">Aug 19 @ 11:30 AM</string>

    <!-- Food vendors. -->
    <string name="koepsells_popcorn">Koepsell\'s Popcorn</string>
    <string name="koepsells_popcorn_serves">Summerfest</string>
    <string name="koepsells_popcorn_url">koepsellspoppingcorn.com</string>
    <string name="maders">Mader\'s</string>
    <string name="maders_serves">Summerfest</string>
    <string name="maders_url">madersrestaurant.com</string>
    <string name="chubbys_cheesesteaks">Chubbys Cheesesteaks</string>
    <string name="chubbys_cheesesteaks_serves">Summerfest</string>
    <string name="chubbys_cheesesteaks_url">chubbyscheesesteaks.com</string>
    <string name="cousins_subs">Cousins Subs</string>
    <string name="cousins_subs_serves">Summerfest</string>
    <string name="cousins_subs_url">cousinssubs.com</string>
    <string name="wein_bauer_inc">Wein-Bauer, Inc</string>
    <string name="wein_bauer_inc_serves">German Fest</string>
    <string name="wein_bauer_inc_url">weinbauer.com</string>
    <string name="sazs">Saz\'s</string>
    <string name="sazs_serves">Festa Italiana</string>
    <string name="sazs_url">sazs.com</string>
    <string name="peter_sciortino_bakery">Peter Sciortino Bakery</string>
    <string name="peter_sciortino_bakery_serves">Festa Italiana</string>
    <string name="peter_sciortino_bakery_url">petersciortinosbakery.com</string>
    <string name="cider_boys">Cider Boys</string>
    <string name="cider_boys_serves">Irish Fest</string>
    <string name="cider_boys_url">ciderboys.com</string>
    <string name="lakefront_brewery">Lakefront Brewery</string>
    <string name="lakefront_brewery_serves">Irish Fest</string>
    <string name="lakefront_brewery_url">lakefrontbrewery.com</string>
    <string name="sprecher_brewery">Sprecher Brewery</string>
    <string name="sprecher_brewery_serves">Irish Fest</string>
    <string name="sprecher_brewery_url">sprecherbrewery.com</string>

    <!-- Sponsors. -->
    <string name="klements">Klement\'s</string>
    <string name="klements_sponsors">Summerfest</string>
    <string name="klements_url">klements.com</string>
    <string name="harley_davidson">Harley-Davidson</string>
    <string name="harley_davidson_sponsors">Summerfest</string>
    <string name="harley_davidson_url">h-d.com</string>
    <string name="usingers">Usinger\'s</string>
    <string name="usingers_sponsors">German Fest</string>
    <string name="usingers_url">usinger.com</string>
    <string name="potawatomi_hotel_casino">Potawatomi Hotel &amp; Casino</string>
    <string name="potawatomi_hotel_casino_sponsors">Polish Fest</string>
    <string name="potawatomi_hotel_casino_url">paysbig.com</string>
    <string name="cedar_crest_ice_cream">Cedar Crest Ice Cream</string>
    <string name="cedar_crest_ice_cream_sponsors">Irish Fest</string>
    <string name="cedar_crest_ice_cream_url">cedarcresticecream.com</string>
    <string name="gilles_frozen_custard">Gilles Frozen Custard</string>
    <string name="gilles_frozen_custard_sponsors">Irish Fest</string>
    <string name="gilles_frozen_custard_url">gillesfrozencustard.com</string>
    <string name="el_rey_grocery">El Rey Grocery</string>
    <string name="el_rey_grocery_sponsors">Mexican Fiesta</string>
    <string name="el_rey_grocery_url">elreyfoods.com</string>
    <string name="potawatomi_foundation">Potawatomi Foundation</string>
    <string name="potawatomi_foundation_sponsors">Indian Summer Festival</string>
    <string name="potawatomi_foundation_url">fcpotawatomi.com</string>
    <string name="sendiks_food_market">Sendik\'s Food Market</string>
    <string name="sendiks_food_market_sponsors">Festa Italiana</string>
    <string name="sendiks_food_market_url">sendiks.com</string>
    <string name="central_bark_doggie_day_care">Central Bark Doggie Day Care</string>
    <string name="central_bark_doggie_day_care_sponsors">Pet Fest</string>
    <string name="central_bark_doggie_day_care_url">centralbarkusa.com</string>

</resources>
