<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_standard"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/city_of_festivals"
        app:layout_constraintBottom_toTopOf="@+id/main_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/main_title"
        style="@style/text_standard"
        android:layout_marginTop="8dp"
        android:text="@string/main_title"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/main_address"
        style="@style/text_standard_url"
        android:autoLink="map"
        android:drawableLeft="@drawable/ic_action_location"
        android:drawableStart="@drawable/ic_action_location"
        android:text="@string/main_address"
        app:layout_constraintBottom_toTopOf="@+id/main_url"
        app:layout_constraintEnd_toEndOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/main_url"
        style="@style/text_standard_url"
        android:autoLink="web"
        android:drawableLeft="@drawable/ic_action_globe"
        android:drawableStart="@drawable/ic_action_globe"
        android:text="@string/main_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_address"
        app:layout_constraintStart_toStartOf="@+id/main_address"
        app:layout_constraintTop_toBottomOf="@+id/main_address" />

</android.support.constraint.ConstraintLayout>